Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

11-Mar-2011 Jean-Marie Simonet
 #$ [#25269] *Save & Copy template styles issue
 # [#25176] 404 after pagebreak in <--prev next --> footer. Thanks Ian and Dave.
 # [#25285] *Normalizing com_messages UI
 
10-Mar-2011 Jean-Marie Simonet
 $# [#25252] *Missing weblink ini strings when submit/edit weblink from a content.
 # [#25262] Logout in administration menu not working
 #$ [#25232] Some errors and warnings are not translated due to missing JText::_(). Thanks Rouven
 # [#25210] Language filter redirecting breaks image uploading in frontend. Patch included. Thanks Bernie.
 # [#25174] Plugin System cache error when debug is on. Thanks Ian.
 # [#25170] Content pictures aren't displaying if SEF is on and System Cache plugin is enabled. Thanks Ian.
 # [#24430] Unable to create external menu item type with an alias that is a folder name

09-Mar-2011 Jean-Marie Simonet
 $ [#25231] Typo in en-GB.lib_joomla.ini. Thanks Serge.
 # [#25213] Several places calling getXMLparser instead of getXMLParser. Thanks Bill and Anon 
 $ [#25145] Incorrect SMTP security option. Thanks Ian and Jozcef.
 # [#25240] *Issue with Articles created in front-end and set to featured. Thanks Andrew.
 # [#25238] 1.6.1 breaks wrapper menu links. Thanks Elin
 # [#25172] RTL issues with beez 2 & beez 5. Thanks Ofer.
 # [#24836] Blog pagination options missed in Gobal configuration (com_content). Thanks Bill.
 # [#25098] failure to delete error message showing incorrectly. Thanks Patrick and Bill.

08-Mar-2011 Jean-Marie Simonet
 $ Updating xx-XX.ini
 # [#25177] hr.gif and sr.gif are transparent. Thanks Erik.
 $ Correcting typo in ini file
 $ [#25136] "Plugin" instead of "Module" in en-GB.lib_joomla.ini
 $ Changing milkyway to beez_20 in ini file. Thanks Sovann Heng.
 #$ Typo in ini key. Thanks Sovann Heng
