@@ -31,6 +31,7 @@ $ -> Language fix or change
  #$ [#25269] *Save & Copy template styles issue
  # [#25176] 404 after pagebreak in <--prev next --> footer. Thanks Ian and Dave.
  # [#25285] *Normalizing com_messages UI
+ # [#24345] *joomla.xml still exists after install of install. Thanks Ian.
  
 10-Mar-2011 Jean-Marie Simonet
  $# [#25252] *Missing weblink ini strings when submit/edit weblink from a content.
